--- a/docs/theme.css
+++ b/docs/theme.css
@@ -11,7 +11,7 @@
 /* Optional: embed custom fonts here with `@import`          */
 @import url('https://fonts.googleapis.com/css2?family=Roboto');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono')
 /* This must remain at the top of this file.                 */
 
 
@@ -31,7 +31,7 @@ html {
   --fig-cap-color:   rgba(0, 0, 0, 0.6);
   /*-- Specify custom fonts ~~~ must be imported above   --*/
   --heading-font:    Roboto Slab ; /*sans-serif;*/
-  --mono-font:       Roboto Slab ;/*monospace;*/
+  --mono-font:       Roboto Mono ;/*monospace;*/
   --body-font:       Roboto ;        /*sans-serif;*/
   --navbar-font:     Roboto Slab ; /*sans-serif;  /* websites + blogs only */
   --hyphens:         Roboto;
@@ -39,6 +39,7 @@ html {
   /*-- Word spacing -- */
   --word-spacing: 0.2em;
   }
+
 
 /*-- ARTICLE METADATA --*/
 d-byline {
